github actions environment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
       MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
       MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
       PORT: 8080
-      FIRST: ${{ secrets.FIRST:0:4 }}
+      FIRST: ${{ secrets.FIRST }}
     environment: ${{ github.event_name == 'push' && 'testing' || inputs.environment }}
     runs-on: ubuntu-latest
     steps:
